FIX: css on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,16 +224,17 @@
 }
 .features {
   background-color: #F7F7F7;
-  padding: 2.7em 2em;
+  padding: 2.7em 1.9em;
 }
 .features__article {
   background-color: #FFF;
   border-radius: 0.3em;
   border: 1px solid #E8E9ED;
   margin-bottom: 2.5em;
+  height: 23.1em;
 }
 .features__article-info-title {
-  padding: 1em 0.6em 0em 0.4em;
+  padding: 0.5em 0.5em;
   font-family: "Raleway", sans-serif;
   font-size: 1.9rem;
   font-weight: 400;
@@ -244,13 +245,34 @@
 .features__article-info-title-text {
   display: block;
 }
+.features__article-info-title--iphone {
+  padding-bottom: 0em;
+}
+.features__article-info-title--trumpet {
+  padding-bottom: 0em;
+  padding-top: 0.7em;
+}
 .features__article-info-text {
   font-size: 0.8rem;
   font-weight: 400;
   line-height: 21px;
   letter-spacing: 0em;
   text-align: left;
-  padding: 1em;
+  padding: 3em 1.1em;
+  padding-bottom: 0em;
+}
+.features__article-info-text-second {
+  padding-right: 2em;
+}
+.features__article-info-text-second--trumpet {
+  padding-right: 1em;
+}
+.features__article-info-text--iphone {
+  padding-top: 1em;
+}
+.features__article-info-text--trumpet {
+  padding-top: 1.5em;
+  font-size: 1rem;
 }
 .features__article-icons {
   text-align: center;
@@ -280,7 +302,7 @@
   height: 12.2em;
   text-align: left;
   border-radius: 0.3em;
-  margin-top: -3em;
+  margin-top: -8em;
 }
 .features__article-icons-img--mac {
   width: 12em;
@@ -297,7 +319,11 @@
   left: 1.5em;
 }
 .features__article-icons-img--trumpet {
-  width: fit-content;
+  width: 18.4em;
+  height: 13em;
+  position: relative;
+  left: -5%;
+  bottom: -5%;
 }
 .features__article-icons--mac {
   padding-top: 2.7em;
@@ -440,6 +466,7 @@
 }
 .pricing {
   padding: 0em 2.5em;
+  margin-bottom: 5.5em;
 }
 .pricing__title {
   font-family: "Raleway", sans-serif;
@@ -467,10 +494,10 @@
 .pricing .prices__plan {
   display: inline-block;
   text-align: center;
-  width: 45%;
+  width: 48%;
   height: 100%;
-  margin-top: 0em;
   vertical-align: middle;
+  padding-top: 0.5em;
 }
 .pricing .prices__plan-title {
   font-family: "Raleway", sans-serif;
@@ -499,8 +526,8 @@
 }
 .pricing .prices__info {
   display: inline-block;
-  width: 45%;
-  margin-left: 3%;
+  width: 50%;
+  padding: 2em 0em;
 }
 .pricing .prices__info-list {
   list-style-type: none;
@@ -509,17 +536,17 @@
   list-style-type: none;
   font-size: 0.9rem;
   font-weight: 400;
-  margin: 1.5em 0em;
+  margin-bottom: 1.5em;
 }
 .pricing .prices__info-list-item-text {
   margin-left: 0.3em;
 }
 .pricing .prices__btn {
-  width: 11.5em;
-  height: 4em;
+  width: 11.7em;
+  height: 3.9em;
   border-radius: 2em;
   margin: 0 auto;
-  margin-top: -8em;
+  margin-top: -7.4em;
   padding: 0.8em;
   text-align: center;
   font-size: 0.8rem;
@@ -605,7 +632,7 @@
 }
 .contact__info {
   width: 100%;
-  margin-top: 2.5em;
+  margin-bottom: 2em;
 }
 .contact__info-title {
   font-family: "Raleway", sans-serif;
@@ -616,7 +643,7 @@
   font-size: 1rem;
   font-weight: 400;
   margin-top: 0.5em;
-  margin-bottom: 4.5em;
+  margin-bottom: 2.5em;
 }
 .contact__info-icons {
   font-size: 1rem;
@@ -673,18 +700,18 @@
 }
 .contact__form-control-text {
   display: inline-block;
-  width: 80%;
+  width: 89%;
   font-weight: 400;
-  font-size: 0.9rem;
+  font-size: 0.77rem;
   line-height: 16px;
   vertical-align: top;
   color: #707070;
 }
 .contact__form-submit {
-  width: 16em;
-  height: 4em;
+  font-size: 0.8rem;
+  width: 17.7em;
+  height: 4.2em;
   text-align: center;
-  vertical-align: middle;
   background-color: #08A6E4;
   border-radius: 2em;
   box-shadow: 0.5em 0.8em 1em 0em rgba(7, 172, 230, 0.2901960784);
