--- a/assets/css/styles/section_contact.scss
+++ b/assets/css/styles/section_contact.scss
@@ -4,7 +4,7 @@
 
     &__info {
         width: 100%;
-        margin-top: 2.5em;
+        margin-bottom: 2em;
 
         &-title {
             font-family: $font-rale;
@@ -16,7 +16,7 @@
             font-size: 1rem;
             font-weight: 400;
             margin-top: 0.5em;
-            margin-bottom: 4.5em;
+            margin-bottom: 2.5em;
         }
 
         &-icons {
@@ -84,9 +84,9 @@
 
                 &-text {
                     display: inline-block;
-                    width: 80%;
+                    width: 89%;
                     font-weight: 400;
-                    font-size: 0.9rem;
+                    font-size: 0.77rem;
                     line-height: 16px;
                     vertical-align: top;
                     color: #707070;
@@ -94,10 +94,10 @@
             }
 
         &-submit {
-            width: 16em;
-            height: 4em;
+            font-size: 0.8rem;
+            width: 17.7em;
+            height: 4.2em;
             text-align: center;
-            vertical-align: middle;
             background-color: $color-blue;
             border-radius: 2em;
             box-shadow: 0.5em 0.8em 1em 0em #07ACE64A;
