--- a/assets/css/styles/section_features.scss
+++ b/assets/css/styles/section_features.scss
@@ -1,15 +1,17 @@
 .features {
     background-color: #F7F7F7;
-    padding: 2.7em 2em;
+    padding: 2.7em 1.9em;
 
     &__article {
         background-color: #FFF;
         border-radius: 0.3em;
         border: 1px solid #E8E9ED;
         margin-bottom: 2.5em;
+        height: 23.1em;
+        
         &-info {
             &-title {
-                padding: 1em 0.6em 0em 0.4em;
+                padding: 0.5em 0.5em;
                 font-family: $font-rale;
                 font-size: 1.9rem;
                 font-weight: 400;
@@ -20,6 +22,16 @@
                 &-text {
                     display: block;
                 }
+
+                &--iphone {
+                    padding-bottom: 0em;
+                }
+
+                &--trumpet {
+                    padding-bottom: 0em;
+                    padding-top: 0.7em;
+                }
+
             }
         
             &-text {
@@ -28,7 +40,30 @@
                 line-height: 21px;
                 letter-spacing: 0em;
                 text-align: left;
-                padding: 1em;
+                padding: 3em 1.1em;
+                padding-bottom: 0em;
+
+                &-first {
+
+                }
+
+                &-second {
+                    padding-right: 2em;
+                    
+                    &--trumpet {
+                        padding-right: 1em;
+                    }
+                }
+
+                &--iphone {
+                    padding-top: 1em;
+                }
+
+                &--trumpet {
+                    padding-top: 1.5em;
+                    font-size: 1rem;
+                }
+                
             }
         }
         
@@ -65,7 +100,7 @@
                     height: 12.2em;
                     text-align: left;
                     border-radius: 0.3em;
-                    margin-top: -3em;
+                    margin-top: -8em;
                 }
             }
 
@@ -88,7 +123,11 @@
                 }
         
                 &--trumpet {
-                    width: fit-content;
+                    width: 18.4em;
+                    height: 13em;
+                    position: relative;
+                    left: -5%;
+                    bottom: -5%;
                 }
             }
     
