--- a/assets/css/styles/section_pricing.scss
+++ b/assets/css/styles/section_pricing.scss
@@ -1,5 +1,7 @@
 .pricing {
     padding: 0em 2.5em;
+    margin-bottom: 5.5em;
+
     &__title {
         font-family: $font-rale;
         font-weight: 400;
@@ -30,10 +32,10 @@
         &__plan {
             display: inline-block;
             text-align: center;
-            width: 45%;
+            width: 48%;
             height: 100%;
-            margin-top: 0em;
             vertical-align: middle;
+            padding-top: 0.5em;
 
             &-title {
                 font-family: $font-rale;
@@ -69,8 +71,8 @@
 
         &__info {
             display: inline-block;
-            width: 45%;
-            margin-left: 3%;
+            width: 50%;
+            padding: 2em 0em;
 
             &-list {
                 list-style-type: none;
@@ -79,7 +81,7 @@
                     list-style-type: none;
                     font-size: 0.9rem;
                     font-weight: 400;
-                    margin: 1.5em 0em;
+                    margin-bottom: 1.5em;
 
                     &-img {
 
@@ -93,11 +95,11 @@
         }
 
         &__btn {
-            width: 11.5em;
-            height: 4em;
+            width: 11.7em;
+            height: 3.9em;
             border-radius: 2em;
             margin: 0 auto;
-            margin-top: -8em;
+            margin-top: -7.4em;
             padding: 0.8em;
             text-align: center;
             font-size: 0.8rem;
